--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li class="completed">Prep Breakfest and Lunch</li>
 		<li class="project">Continue Coding This Organizer</li>
 		<li class="vgdc">Post VGDC Ads past 12:00 PM</li>
-		<li class="vgdc">Send Arren form details</li>
+		<li class="vgdc completed">Send Arren form details</li>
 		<li class="school">Work on 135 with Vivian</li>
 		<li class="school">Work on 161 Setup Design</li>
 		<li class="leet">LeetCode <a href="https://leetcode.com/problems/single-number/">Problem 136</a></li>
