--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 	<p class="subHeading"><span id="today" class="focus" onclick="myFunctionTwo()">Today</span> || <span class="nonFocus" onclick="myFunction()" id="week">Week</span> </p>
 	<ul id="daily" class="viewable">
 		<li class="completed">Prep Breakfest and Lunch</li>
-		<li class="project">Continue Coding This Organizer</li>
+		<li class="project completed">Continue Coding This Organizer</li>
 		<li class="vgdc">Post VGDC Ads past 12:00 PM</li>
 		<li class="vgdc completed">Send Arren form details</li>
 		<li class="school">Work on 135 with Vivian</li>
 		<li class="school">Work on 161 Setup Design</li>
-		<li class="leet">LeetCode <a href="https://leetcode.com/problems/single-number/">Problem 136</a></li>
+		<li class="leet completed">LeetCode <a href="https://leetcode.com/problems/single-number/">Problem 136</a></li>
 		<li class="leet">LeetCode <a href="https://leetcode.com/problems/merge-two-binary-trees/">Problem 617</a></li>
 		<li class="leet">LeetCode <a href="https://leetcode.com/problems/maximum-depth-of-binary-tree/">Problem 104</a></li>
 		<li>2 Mile Run</li>
 		<li>15 Mins Abs</li>
-		<li>Calculate House Budget</li>
+		<li class="completed">Calculate House Budget</li>
 	</ul>
 	<ul id="weekly" class="hidden">
 		<li class="project">Finish Coding Organizer</li>
